--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
+# PlatformIO
 .pio
+
+# VS Code
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.egg-info/
+.eggs/
+
+# Analysis outputs (auto-generated)
+analysis/*.png
+analysis/paper/*.aux
+analysis/paper/*.log
+analysis/paper/*.out
+analysis/paper/*.synctex.gz
+
+# OS files
+.DS_Store
+Thumbs.db
